[package]
name = "oracle-nosql-rust-sdk-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.41", features = ["full", "derive", "parsing", "printing", "proc-macro", "clone-impls", "extra-traits"] }
quote = "1.0.33"
proc-macro2 = "1.0.17"

[lib]
proc-macro = true
